vlib/v/parser/tests/for_index_in_range.vv
for i, k in 0..5 {
}
